Grid layout created for desktop site

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       <h1>
         Reliable, efficient delivery <strong>Powered by Technology</strong>
       </h1>
-      <p>
+      <p class="summary">
         Our Artificial Intelligence powered tools use millions of project data
         points to ensure that your project is successful
       </p>
       <div class="card-stack">
-        <div class="role-card cyan-border">
+        <div class="role-card supervisor">
           <h2>Supervisor</h2>
           <p class="role-definition">
             Monitors activity to identify project roadblocks
@@ -44,7 +44,7 @@
             src="images/icon-supervisor.svg"
           />
         </div>
-        <div class="role-card red-border">
+        <div class="role-card teambuilder">
           <h2>Team Builder</h2>
           <p class="role-definition">
             Scans our talent network to create the optimal team for your project
@@ -55,7 +55,7 @@
             src="images/icon-team-builder.svg"
           />
         </div>
-        <div class="role-card orange-border">
+        <div class="role-card karma">
           <h2>Karma</h2>
           <p class="role-definition">
             Regularly evaluates our talent to ensure quality
@@ -66,7 +66,7 @@
             src="images/icon-karma.svg"
           />
         </div>
-        <div class="role-card blue-border">
+        <div class="role-card calculator">
           <h2>Calculator</h2>
           <p class="role-definition">
             Uses data from past projects to provide better delivery estimates
